more heap and build-caches